--- a/ej4/obligatorio_so_parte4-2/docker-compose.yaml
+++ b/ej4/obligatorio_so_parte4-2/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
     image: redis:alpine
     container_name: redis
     restart: always
+    command: ["redis-server", "--appendonly", "yes"]
     volumes:
       - redis-data:/data
     networks:
